# mcpfox

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mcpfox/: __init__.py  __main__.py  analysis.py  cli.py  discovery.py  downloader.py  enumeration.py  html_report.py  http_probe.py  interactive.py  rendering.py
