[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpfox"
version = "1.0.0"
description = "MCP server enumeration and security analysis tool for penetration testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "security", "penetration-testing", "enumeration", "ai-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "rich>=13",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
mcpfox = "mcpfox.cli:run"

[project.urls]
Homepage = "https://github.com/yourhandle/mcpfox"
Issues   = "https://github.com/yourhandle/mcpfox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpfox*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
